태그모델 만들기

--- a/askdjango/django-ep11.ipynb
+++ b/askdjango/django-ep11.ipynb
@@ -31,6 +31,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QuerySet [<Post: FADF>, <Post: 제목 #999>, <Post: 제목 #998>]>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Post.objects.filter(tag_set__name='django')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QuerySet [<Post: FADF>, <Post: FADF>, <Post: 제목 #999>, <Post: 제목 #998>]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Post.objects.filter(tag_set__name__in=['django', 'python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
