blog.models.post 모델에 user필드 추가

--- a/askdjango/django-ep11.ipynb
+++ b/askdjango/django-ep11.ipynb
@@ -346,6 +346,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##related_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Comment: Comment object>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Comment.objects.create(post=post, author = '남태식', message = '댓글#1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<QuerySet [<Comment: Comment object>, <Comment: Comment object>, <Comment: Comment object>]>\n",
+      "<QuerySet [<Comment: Comment object>, <Comment: Comment object>, <Comment: Comment object>]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "post = Post.objects.first()\n",
+    "print(Comment.objects.filter(post=post))# 방법1\n",
+    "print(post.comment_set.all()) #방법2 - related name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Post: \"MS에 도전장\"…티맥스, 새 PC운영체제 '티맥스OS' 공개(종합)>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comment = Comment.objects.first()\n",
+    "comment.post"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
